[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/directional_menu/scenes/Slot/Slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/directional_menu/scenes/DirectionalMenu/DirectionalMenu.gd" type="Script" id=2]

[node name="DirectionalMenu" type="Control"]
script = ExtResource( 2 )

[node name="SlotLeftMiddle" parent="." instance=ExtResource( 1 )]

[node name="SlotLeftTop" parent="." instance=ExtResource( 1 )]
DirectionUnitVector = Vector2( -1, -1 )
VDirection = 0

[node name="SlotCenterTop" parent="." instance=ExtResource( 1 )]
DirectionUnitVector = Vector2( 0, -1 )
HDirection = 1
VDirection = 0

[node name="SlotRightTop" parent="." instance=ExtResource( 1 )]
DirectionUnitVector = Vector2( 1, -1 )
HDirection = 2
VDirection = 0

[node name="SlotRightMiddle" parent="." instance=ExtResource( 1 )]
DirectionUnitVector = Vector2( 1, 0 )
HDirection = 2

[node name="SlotRightBottom" parent="." instance=ExtResource( 1 )]
DirectionUnitVector = Vector2( 1, 1 )
HDirection = 2
VDirection = 2

[node name="SlotCenterBottom" parent="." instance=ExtResource( 1 )]
DirectionUnitVector = Vector2( 0, 1 )
HDirection = 1
VDirection = 2

[node name="SlotLeftBottom" parent="." instance=ExtResource( 1 )]
DirectionUnitVector = Vector2( -1, 1 )
VDirection = 2
